report.txt
OrderBookEntry.h:7:1: error: Code 'classOrderBookEntry{' is invalid C code. Use --std or --language to configure the language. [syntaxError]
class OrderBookEntry
^
nofile:0:0: information: Cppcheck cannot find all the include files. Cppcheck can check the code without the include files found. But the results will probably be more accurate if all the include files are found. Please check your project's include directories and add all of them as include directories for Cppcheck. To see what files Cppcheck cannot find use --check-config. [missingIncludeSystem]

